# qp

./: .clang-format  .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README.md  configure  configure.ac
.github/workflows/: ci.yml
po/: Makefile.am  Makefile.in  Makevars  POTFILES.in  qp.pot  zh_CN.gmo  zh_CN.po
src/: Makefile.am  Makefile.in  cli.cpp  cli.hpp  config.cpp  config.hpp  main.cpp  makefs.cpp  makefs.hpp  util.cpp  util.hpp
tests/: Makefile.am  Makefile.in  test_makefs.cpp
