AC_INIT([qp], [0.2.0], [github.com/Qaaxaap/qp/issues])

AC_CONFIG_SRCDIR([src/main.cpp])
AM_INIT_AUTOMAKE([foreign subdir-objects])

AC_PROG_CC
AC_PROG_CXX

AC_CONFIG_HEADERS([config.h])

AC_CHECK_HEADER([libintl.h], [], [AC_MSG_ERROR([libintl.h not found; install gettext])])
AC_CHECK_FUNC([gettext], [], [AC_MSG_ERROR([gettext() not found])])

AC_CONFIG_FILES([
    Makefile
    po/Makefile
    src/Makefile
    tests/Makefile
])

AC_OUTPUT
